[gd_scene load_steps=4 format=3 uid="uid://7m8hxols4o6r"]

[ext_resource type="Script" path="res://drawing_pad_and_bitmap_display.gd" id="1_obgad"]
[ext_resource type="PackedScene" uid="uid://bnbn0w0pbtwj0" path="res://drawing_pad.tscn" id="1_tjhb3"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_l1m5l"]
size = Vector2(28, 28)

[node name="DrawingPadAndBitmapDisplay" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_obgad")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="DrawingPad" parent="VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("1_tjhb3")]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 256)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
alignment = 1

[node name="ClearButton" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Clear"

[node name="ConvertButton" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Convert â†“"

[node name="FilenameEdit" type="LineEdit" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "filename"

[node name="LoadButton" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Load"

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer3"]
layout_mode = 2
alignment = 1

[node name="BitmapDisplay" type="TextureRect" parent="VBoxContainer/MarginContainer3/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_l1m5l")
